# CmakeSolution

./: .gitignore  .gitmodules  CMakeLists.txt  Eclipse.bat  MinGW.bat  README.md  VS2008_x64.bat  VS2008_x86.bat  VS2010_x64.bat
